# udp-video-streaming

./: .gitignore  CMakeLists.txt  README.md
app/: config.h  udp_capture_latency_test.cc  udp_capture_receiver.cc  udp_client.cc  udp_server.cc  udp_writer_sender.cc
cmake/: util.cmake
include/: config.h  practical_socket.h  udp_capture.h  udp_writer.h
include/uvs/: config.h  latency_tester.h  practical_socket.h  udp_capture.h  udp_writer.h
include/uvs/legacy/: udp_capture.h  udp_writer.h
include/uvs/protocol/: image_streaming_data.h  uav_cruising_data.h
src/: practical_socket.cc  udp_capture.cc  udp_writer.cc
src/uvs/: latency_tester.cc  practical_socket.cc  udp_capture.cc  udp_writer.cc
src/uvs/legacy/: udp_capture.cc  udp_writer.cc
src/uvs/util/: latency_tester.cc  practical_socket.cc
